fix for the overflow width after animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ body {
     50% { opacity: 0; }
     100% { opacity:1 }
 }
+#header-wrapper {
+    overflow: hidden !important;
+}
 .blink {
     animation: blink 1.5s ease-in infinite;
 }
